# MetaBeeAI

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  config.py  env.example  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
.doctrees/api/: index.doctree  llm_benchmarking.doctree  llm_review_software.doctree  metabeeai_llm.doctree  process_pdfs.doctree  query_database.doctree
.doctrees/guide/: analysis.doctree  benchmarking.doctree  contributing.doctree  index.doctree  pipeline_overview.doctree  setup.doctree  troubleshooting.doctree  workflow.doctree
.doctrees/submodule/: index.doctree  llm_benchmarking.doctree  llm_review_software.doctree  metabeeai_llm.doctree  process_pdfs.doctree  query_database.doctree
_modules/: index.html
api/: index.html  llm_benchmarking.html  llm_review_software.html  metabeeai_llm.html  process_pdfs.html  query_database.html
docs/: conf.py  index.rst  installation.rst  quickstart.rst
examples/: README.txt
guide/: analysis.html  benchmarking.html  contributing.html  index.html  pipeline_overview.html  setup.html  troubleshooting.html  workflow.html
llm_benchmarking/: README.md  deepeval_benchmarking.py  edge_cases.py  prep_benchmark_data.py  prep_benchmark_data_from_GUI_answers.py
metabeeai_llm/: README.md  json_multistage_qa.py  llm_pipeline.py
process_pdfs/: batch_deduplicate.py
submodule/: index.html  llm_benchmarking.html  llm_review_software.html  metabeeai_llm.html  process_pdfs.html  query_database.html
tests/: test_cli.py
(+71 files in other folders)
